# artificial-intelligence

./: ai.conf
0.problem-set/: chicken-duck-input.txt  chicken-duck-output.txt  chicken-duck.hs  cryptarithm-input.txt  cryptarithm-output.txt  cryptarithm.hs  place-your-bets-input.txt  place-your-bets-output.txt  place-your-bets.hs
2.n-puzzle/: README  npuzzle.cabal
2.n-puzzle/app/: Main.hs
2.n-puzzle/solver/: buildandprofile  npuzzle.cabal  runsolver  stack.yaml
2.n-puzzle/solver/app/: Main.hs  Preprocess.hs
2.n-puzzle/solver/benchmark/: benchmark  permutations
2.n-puzzle/solver/src/: Lib.hs  Queue.hs  Serializer.hs  Utils.hs  permutation.c  permutation.h
2.n-puzzle/ui/: index.html
2.n-puzzle/ui/css/: style.css
2.n-puzzle/ui/js/: puzzle.js
3.connect-4/: README
3.connect-4/solver/: connect4.cabal  runsolver
3.connect-4/solver/app/: Main.hs
3.connect-4/solver/src/: +  Connect4.hs
3.connect-4/solver/src/Connect4/: Types.hs
3.connect-4/ui/: index.html
3.connect-4/ui/css/: .style.css.swp  style.css
3.connect-4/ui/js/: connect4.js
4.assignment/: README  index.html
4.assignment/css/: style.css
4.assignment/js/: assignment.js
5.classification/: README  condEntropy.m  decisionTree.dot  entropy.m  id3.m  main.m  splitDataset  toGraphViz.m
hw1/: hw.hs  hw1.hs
