name:                npuzzle
version:             0.1.0.0
synopsis:            AI Homework #2
description:         n-puzzle solver
homepage:            http://github.com/frcepeda/artificial-intelligence
license:             BSD3
license-file:        LICENSE
author:              Freddy Román
maintainer:          me@freddy.mx
copyright:           2016 Freddy Román
category:            IA
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5, vector, pqueue,
                       transformers, containers, primitive

executable npuzzle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, npuzzle, wai, warp, http-types,
                       bytestring, aeson, vector

executable preprocessing
  hs-source-dirs:      app
  main-is:             Preprocess.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, npuzzle, bytestring, binary, cereal,
                       vector, cereal-vector
